compiler/testData/diagnostics/tests/subtyping/memberAnonymousObjects.fir.kt
class Test {
    private var x = object {};
    init {
        x = <!ASSIGNMENT_TYPE_MISMATCH!>object<!> {}
    }
}